# PTalk-V2

esp32-c5/src/: AppController.cpp  AppController.hpp  CMakeLists.txt  Version.hpp  idf_component.yml  main.cpp
esp32-c5/src/assets/logos/: logo1.hpp  logo2.hpp
esp32-c5/src/config/: DeviceProfile.cpp  DeviceProfile.hpp  PinConfig.hpp
esp32-c5/src/system/: AudioManager.cpp  BluetoothService.cpp  BluetoothService.hpp  CliConsole.cpp  CliConsole.hpp  NetworkManager.cpp  NetworkManager.hpp  SpiBridge.cpp  SpiBridge.hpp  StateManager.cpp  StateManager.hpp  StateTypes.hpp  UartBridge.cpp  UartBridge.hpp
esp32-s3/src/: AppController.cpp  AppController.hpp  CMakeLists.txt  Version.hpp  idf_component.yml  main.cpp
esp32-s3/src/assets/emotions/: emotion_types.hpp  happy.cpp  happy.hpp  idle.cpp  idle.hpp  listening.cpp  listening.hpp  neutral.cpp  neutral.hpp  sad.cpp  sad.hpp  stun.cpp  stun.hpp  thinking.cpp  thinking.hpp
esp32-s3/src/assets/icons/: battery_charge.cpp  battery_charge.hpp  battery_full.cpp  battery_full.hpp  critical_power.cpp  critical_power.hpp
esp32-s3/src/config/: DeviceProfile.cpp  DeviceProfile.hpp  PinConfig.hpp
esp32-s3/src/system/: AudioManager.cpp  AudioManager.hpp  DisplayManager.cpp  DisplayManager.hpp  PowerManager.cpp  PowerManager.hpp  SpiBridge.cpp  SpiBridge.hpp  StateManager.cpp  StateManager.hpp  StateTypes.hpp  UartBridge.cpp  UartBridge.hpp
esp32-s3/src/ui/: SceneManager.cpp  SceneManager.hpp  VariantRegistry.cpp  VariantRegistry.hpp
esp32-s3/src/ui/emotions/: render_angry.cpp  render_bored.cpp  render_confused.cpp  (+14 more)
(+91 files in other folders)
